Improve the fish scam and add feats for Pink Flower Tree.

--- a/src/templatefiles/templates/dnd/concrete/monsters/stats/pink-flower-tree.html
+++ b/src/templatefiles/templates/dnd/concrete/monsters/stats/pink-flower-tree.html
@@ -17,7 +17,7 @@
     Telepathy
 {% endblock %}
 {% block spell-like-abilities %}
-    Psyionics (ML10, 88PP)
+    Psyionics (ML10, 88PP, DC = 15 + PL)
 {% endblock %}
 {% block saves %}
     <ul>
@@ -37,7 +37,7 @@
     </ul>
 {% endblock %}
 {% block skills %}{% endblock %}
-{% block feats %}Endurance, Die hard, Iron will, +3 (psyionic){% endblock %}
+{% block feats %}Endurance, Die hard, Iron will, Overchannel(+2), Talented, Twin Power{% endblock %}
 {% block grapple %}-{% endblock %}
 {% block gear %}{% endblock %}
 
@@ -68,6 +68,11 @@
             <a href="http://dndsrd.net/psionicPowersQtoW.html#suggestion-psionic">Suggestion</a>,
             <a href="http://dndsrd.net/psionicPowersDtoF.html#fate-link">Fate link</a>,
             <a href="http://dndsrd.net/psionicPowersGtoP.html#modify-memory-psionic">Modify memory</a>,
+            <a href="http://dndsrd.net/psionicPowersDtoF.html#dominate-psionic">Dominate</a>
+        </p></dd>
+        <dt>Round 1</dt>
+        <dd><p>
+            Twin Suggestion Mass to go to sleep in flowers -> 3 + 6 + 3x2 = 15pp -> WillDC 17
         </p></dd>
     </dl>
 {% endblock %}
