--- a/src/templatefiles/templates/dnd/concrete/obstacles/04-respectable-citizens/index.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/04-respectable-citizens/index.html
@@ -1,11 +1,5 @@
 {% extends "dnd/abstract/base.html" %}
 
 {% block todo %}
-    <ul>
-        <li>Elite pirate ship should enter the harbour</li>
-    </ul>
-    <ul>
-        The book will scream out again:
-        Break the hearts of all atheist. Only abandoning love leads to the right path.
-    </ul>
+    <p>Locathah could feel betrayed with disappearance of fish trade and/or working for Waukeen.</p>
 {% endblock %}
