--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
@@ -91,7 +91,7 @@ Locathah stats
             Someone like <a href="/dnd/characters/Thekesh-Moltabar.html">Thekesh</a> was able to have a better life
        </dd>
        <dd>15 >= children job is to put metal inside of rotten fish with their small fingers</dd>
-       <dd>18 >= children work for <a href="/dnd/characters/Thekesh-Moltabar.html">Thekesh</a></dd>
+       <dd>18 >= children work in secret for <a href="/dnd/characters/Thekesh-Moltabar.html">Thekesh</a></dd>
     </dl>
     <p>Children mothers inside caring for crying children</p>
     <dl class="dc">
@@ -104,9 +104,9 @@ Locathah stats
     <dl class="dc">
        <dt>GatherDC:</dt>
        <dd>10 < children were playing (retry allowed)</dd>
-       <dd>10 >= children suffer injuries when working, but they badly need money</dd>
-       <dd>15 >= their job is to put metal inside of rotten fish with their small fingers</dd>
-       <dd>18 >= children work for <a href="/dnd/characters/Thekesh-Moltabar.html">Thekesh</a></dd>
+       <dd>10 >= children suffer injuries when working, but they badly need money, because Moltabar doesn't pay enough.</dd>
+       <dd>15 >= the children job is to put metal inside of rotten fish with their small fingers</dd>
+       <dd>18 >= children secretly work for <a href="/dnd/characters/Thekesh-Moltabar.html">Thekesh</a></dd>
     </dl>
 
     <dl class="dc">
