--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/slums-market.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/slums-market.html
@@ -110,7 +110,10 @@
             10 >= The men say that it is all <a href="../../../characters/Thekesh-Moltabar+naieve-entrepeneur.html">Moltabar's</a>
             fault and that they wish they worked for <a href="../../../characters/Otalan+delicious-fish-merchant.html">Otalan</a>
         </dd>
-        <dd> 14 >= The men drinking earn some money on the side at night</dd>
+        <dd>
+            14 >= The men drinking earn some money on the side at night for their saviour and bar owner
+            <a href="../../../characters/Thekesh-Moltabar+naieve-entrepeneur.html">Thekesh</a>
+        </dd>
     </dl>
 {% endblock %}
 
