--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
@@ -66,7 +66,9 @@
             14 >= The men say that it is all <a href="../../../characters/Thekesh-Moltabar+naieve-entrepeneur.html">Moltabar's</a> fault
             and that they wish they worked for <a href="../../../characters/Otalan+delicious-fish-merchant.html"></a>
         </dd>
-        <dd> 18 >= The men drinking earn some money on the side at night</dd>
+        <dd>
+            18 >= The men drinking earn some money on the side at night for their hero
+            <a href="../../../characters/Thekesh-Moltabar+naieve-entrepeneur.html">Thekesh</a></dd>
     </dl>
 
      <dl class="dc">
