Add some geography based on Paul Kemp books.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/overview.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/overview.html
@@ -6,5 +6,14 @@
 
     <p>A city in <a href="../../places/Sembia.html"></a></p>
 
+    <p>Some features of Yauhnn</p>
+    <ul>
+        <li>2 to 3 story buildings</li>
+        <li>Steeply pitched tile roofs</li>
+        <li>Open sewer channel on either side of the streets</li>
+        <li>Noble houses are simple. Most have turrets</li>
+        <li>There are 2 domes in the center of the city</li>
+    </ul>
+
 
 {% endblock %}
