Restructure the first day in the city to reveal info more slowly.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html
@@ -15,6 +15,7 @@
         lets you know that the entire slums are there to help.
         As an Oracle of Talos she also offers any kind of service that you may need (dirty -> WillDC).
         You can find her in the Church of Talos.
+        She hopes to speak tomorrow when you are more familiar with the city and she has done her prayers.
     </p>
 
 {% endblock %}
@@ -24,9 +25,20 @@
 {% endblock %}
 
 {% block achievements %}
+    <p>Day 1</p>
     <ul>
         <li>Walking the slumbs reveals opportunities to <a href="01-earning-on-the-side.html">earn on the side</a></li>
         <li>Visiting the market will lead to <a href="02-assasination-attempt.html">assassination attempt</a></li>
+    </ul>
+
+    <p>Night 1 (if unlocked already)</p>
+    <ul>
+        <li>Visit the </li>
+    </ul>
+
+    <p>Day 2</p>
+    <ul>
+        <li></li>
     </ul>
 {% endblock %}
 
