--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/03-first-night-in-town.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/03-first-night-in-town.html
@@ -4,7 +4,8 @@
 {% block summary %}No summary{% endblock %}
 
 {% block events %}
-    <p>no events</p>
+    <p>Visit the Horrid Lust</p>
+    <p>Visit Ocean's Pleasure</p>
 {% endblock %}
 
 {% block locations %}
@@ -12,8 +13,7 @@
 {% endblock %}
 
 {% block achievements %}
-    <p>Markets is closed down due to pirate threat or death of a cleric.</p>
-    <p>They see a familiar raven fly away, loosing a feather</p>
+    <p>no achievements</p>
 {% endblock %}
 
 {% block creatures %}
