--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/B1-mithral-cargo.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/B1-mithral-cargo.html
@@ -1,1 +1,2 @@
 <p>Bring fish from fish market through the poormans gate to the underdark and to the underground shaft leading to secret lab.</p>
+<p>Scrag troll?</p>
