--- a/src/templatefiles/templates/dnd/concrete/obstacles/07-releasing-a-soul/index.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/07-releasing-a-soul/index.html
@@ -32,6 +32,9 @@
         They have come with a flying ship (as none of the teleporters really know the place)
         The Phase Spider is lurking on the ethereal plane and strike Lokahmee from nowhere.
         Pirates are shooting fireballs from the ship.
-        Garrilions may intervene if necessary. Hanuman may help as well. Oracle helps also?
+        Oracle helps by going into The Fury
+
+        Garrilions may intervene if necessary. Hanuman may help as well.
+
     </p>
 {% endblock %}
