--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/the-horrid-lust+pirate-inn.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/the-horrid-lust+pirate-inn.html
@@ -1,3 +1,5 @@
+{% extends "dnd/abstract/place.html" %}
+
 {% block title %}The Horrid Lust (pirate inn){% endblock %}
 {% block summary %}A boat that lies just outside the harbor, where different laws count.{% endblock %}
 
@@ -8,10 +10,10 @@
 {% endblock %}
 
 {% block locations %}
-    <p>
+    <p><b>
         The ship looks neglected. Sea weed has grown up to the bough.
         It sails have started to mould. You wonder when it will sink.
-    </p>
+    </b></p>
     <p>
         The deck is a big mess of old stuff.
         From the inside the boat looks a lot better.
