Add clue about the faith of the abandoned village.

--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/abandoned-village.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/abandoned-village.html
@@ -32,7 +32,7 @@
 {% endblock %}
 
 {% block achievements %}
-    <p>no achievements</p>
+    <p>They could find the note to Rafana in the locked chest.</p>
 {% endblock %}
 
 {% block creatures %}
@@ -97,5 +97,5 @@
 {% endblock %}
 
 {% block misc %}
-    <p>no misc</p>
+    <p>Handout 05-Hidden-letter.odt</p>
 {% endblock %}
