Add assassination as event.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/01-earning-on-the-side.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/01-earning-on-the-side.html
@@ -25,7 +25,7 @@
 {% block achievements %}
     <p>
         After walking the slums they could go to the market
-        (leading to <a href="02-assasination-attempt.html">assassination attempt</a>)
+        (leading to <a href="02-the-assassination.html">assassination attempt</a>)
     </p>
 {% endblock %}
 
