--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/church-of-Waukeen.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/church-of-Waukeen.html
@@ -1,12 +1,12 @@
 {% extends "dnd/abstract/place.html" %}
 
 {% block title %}The Church of Waukeen{% endblock %}
-{% block summary %}No summary{% endblock %}
+{% block summary %}A place of worship for merchant. Main entrance to the market.{% endblock %}
 
 {% block events %}
     <p>At night there are guards at the top of the stairs who check people walking up.</p>
     <p>
-        Walking up the stairs an <a href="../../../obstacles/03-poor-life-in-Yauhnn/02-assasination-attempt.html">assassination attempt</a>
+        Walking up the stairs an <a href="../../../obstacles/03-poor-life-in-Yauhnn/02-the-assassination.html">assassination attempt</a>
         takes place.
     </p>
 {% endblock %}
