--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html
@@ -28,7 +28,7 @@
     <p>Day 1</p>
     <ul>
         <li>Walking the slumbs reveals opportunities to <a href="01-earning-on-the-side.html">earn on the side</a></li>
-        <li>Visiting the market will lead to <a href="02-assasination-attempt.html">assassination attempt</a></li>
+        <li>Visiting the market will lead to <a href="02-the-assassination.html">assassination attempt</a></li>
     </ul>
 
     <p>Night 1 (if unlocked already)</p>
