Updating the ritual to make sense in the bigger picture.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/04-respectable-citizens/the-secret-ritual.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/04-respectable-citizens/the-secret-ritual.html
@@ -1,6 +1,9 @@
 {% extends "dnd/abstract/base.html" %}
 
 {% block content %}
+    <p>Does Pomin point out the ritual to them? Does he get his info from Rafana?</p>
+    <p>When hearing the following the adventurers know that Talos intervened.</p>
+
     <p>L: It failed</p>
     <p>O: What?! It failed again?!</p>
     <p>L: I don't understand</p>
@@ -26,7 +29,8 @@
     <p>
         L: According to the literature Hanuman is completely powerless without his soul.
         Whether it is a soul or not is irrelevant. It is his source of power.
-        It makes sense that he will try to hide it from whomever wants to steal it.
+        It makes sense that he will try to hide it to prevent theft.
+        Misleading everybody to believe that that orb is his source of power is the best security there is.
     </p>
     <p>R: Can we discover where he is hiding it?</p>
     <p>L: Yes we can, but not by conventional magic. We'll need another ritual.</p>
