--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/03-first-night-in-town.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/03-first-night-in-town.html
@@ -1,15 +1,19 @@
 {% extends "dnd/abstract/obstacle.html" %}
 
-{% block title %}No Title{% endblock %}
-{% block summary %}No summary{% endblock %}
+{% block title %}First Night In Town{% endblock %}
+{% block summary %}Adventurers get a sense of the nightlife in Yauhnn{% endblock %}
 
 {% block events %}
-    <p>Visit the Horrid Lust</p>
-    <p>Visit Ocean's Pleasure</p>
+    <p>no events</p>
 {% endblock %}
 
 {% block locations %}
-    <p>no locations</p>
+    <p>Depending on whether they have heard from these places they can go:</p>
+    <ul>
+        <li>Visit the <a href="../../places/Yauhnn/slums-district/the-horrid-lust+pirate-inn.html">Horrid Lust</a></li>
+        <li>Visit the <a href="../../places/Yauhnn/trade-district/harbor/the-oceans-night+pleasure-house.html">Ocean's Lust</a>.</li>
+        <li>Visit the nightlife at <a href="../../places/Yauhnn/trade-district/the-gildes.html">the gildes</a></li>
+    </ul>
 {% endblock %}
 
 {% block achievements %}
