--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-gildes.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-gildes.html
@@ -1,6 +1,8 @@
 {% extends "dnd/abstract/place.html" %}
 
 {% block locations %}
+    <p>Good place to show more Elven hate :)</p>
+
     <p>..... inn</p>
     <ul>
         <li>Bard comes to play here</li>
@@ -9,4 +11,6 @@
     <p>
         If they frisk <a href="../../../characters/Mirika+insane-half-elf.html">Mirika</a> they find the keys to her room in this inn.
     </p>
+    <p>Game houses?</p>
+    <p>Master brewery?</p>
 {% endblock %}
