--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-center.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-center.html
@@ -80,7 +80,7 @@
     <p>There are also these black with gold artifacts in the bag.</p>
     <ul>
         <li>Two rapiers</li>
-        <li>A quiver</li>
+        <li>A quiver with 5 force arrows</li>
         <li>A staff</li>
     </ul>
 {% endblock %}
