--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/the-tree.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/the-tree.html
@@ -72,7 +72,7 @@
     <p>In the flower lies the body of a dead ranger.</p>
     <ul>
         <li>Bow +1 speed</li>
-        <li>25 arrows + 5 force arrows</li>
+        <li>25 arrows</li>
         <li>Studded leather +2</li>
         <li>1x CSW</li>
     </ul>
