Rename a bunch of files to use temple instead of church.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/04-finding-temple-of-Talos.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/04-finding-temple-of-Talos.html
@@ -5,7 +5,7 @@
 
 {% block achievements %}
     <p>
-        When entering church of Talos proceed with
+        When entering temple of Talos proceed with
         <a href="../03-poor-life-in-Yauhnn/00-exploring-the-city.html">exploring the city</a>
     </p>
 {% endblock %}
@@ -17,8 +17,8 @@
     </p>
 
     <p>
-        They may decide to enter the <a href="../../places/Yauhnn/slums-district/church-of-Valkur.html">lighthouse/church</a>.
-        Which will lead to <a href="../../places/Yauhnn/slums-district/church-of-Talos.html">church of Talos</a>.
+        They may decide to enter the <a href="../../places/Yauhnn/slums-district/temple-of-Valkur.html">lighthouse/temple</a>.
+        Which will lead to <a href="../../places/Yauhnn/slums-district/temple-of-Talos.html">temple of Talos</a>.
         Or <a href="../../characters/Pomin+gnome-cormyr-spy.html">Pomin</a>/Locathah may lead them there upon seeing their condition.
         Any contact with guards in their state will lead to <a href="../../places/Yauhnn/slums-district/prison.html">prison</a>
         and if they do not escape death sentence by Waukeen priests.
@@ -37,7 +37,7 @@
 
     <dl class="dc">
         <dt>LocalDC: (Valkur)</dt>
-        <dd>10 >= In Yauhnn the lighthouse acts as a church of Valkur (who is a servant of Talos).</dd>
+        <dd>10 >= In Yauhnn the lighthouse acts as a temple of Valkur (who is a servant of Talos).</dd>
     </dl>
 
     <dl class="dc">
