--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/temple-of-Talos.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/temple-of-Talos.html
@@ -32,7 +32,7 @@
 
     <p>From here adventurers can go to:</p>
     <ul>
-        <li>The stairs behind the curtains on the alter leading to <a href="church-of-Valkur.html">church of Valkur</a></li>
+        <li>The stairs behind the curtains on the alter leading to <a href="temple-of-Valkur.html">church of Valkur</a></li>
         <li>A small pathway in the back of the cave leads to <a href="slums-market.html">slums market</a></li>
     </ul>
 {% endblock %}
