Change church into temple everywhere.

--- a/src/templatefiles/templates/dnd/concrete/characters/Kalong+waukeen-inquisitor.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/Kalong+waukeen-inquisitor.html
@@ -4,7 +4,7 @@
 
 {% block name %}Kalong{% endblock %}
 {% block summary %}
-    Cleric, Church Inquisitor for Waukeen. Wants to unravel the heresy within Waukeen church.
+    Cleric, Church Inquisitor for Waukeen. Wants to unravel the heresy within Waukeen temple.
 {% endblock %}
 
 {% block story %}
@@ -20,7 +20,7 @@
 {% block motivation %}
     <p>
         Will help to bring to justice any heresy.
-        For most making an offer to Waukeen church is enough to redeem.
+        For most making an offer to Waukeen temple is enough to redeem.
         The following that FTG is doing is heresy (ReligionDC 12):
     </p>
     <ul>
