--- a/src/templatefiles/templates/dnd/concrete/obstacles/00-prologue/01-events-so-far.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/00-prologue/01-events-so-far.html
@@ -39,7 +39,7 @@
     <li>A cleric who thought to serve Eldath was a pawn in a scheme by Talos</li>
     <li>This scheme let to the destruction of the Tower of Lokahmee (an Elven whizard)</li>
     <li>With the destruction of the tower the people in the under city got a fair chance again to profit from the Mithrall source there</li>
-    <li>You received a holy book from the church of Talos (God of Destruction) from the hands of Hanuman a small half-man/half-monkey</li>
+    <li>You received a holy book from the temple of Talos (God of Destruction) from the hands of Hanuman a small half-man/half-monkey</li>
     <li>The first page of this Book of Annihilation talks about how destruction can free people from the burdens and chains of institutions</li>
 </ol>
 
