--- a/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/03-shark-attack.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/03-shark-attack.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block achievements %}
-    <p>After the shark flees or is defeated, proceed with <a href="04-finding-church-of-Talos.html">church of Talos</a>.</p>
+    <p>After the shark flees or is defeated, proceed with <a href="04-finding-temple-of-Talos.html">temple of Talos</a>.</p>
 {% endblock %}
 
 {% block creatures %}
