--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html
@@ -14,7 +14,7 @@
         Before letting you rest <a href="../../characters/Janala+talos-oracle.html">Janala</a>
         lets you know that the entire slums are there to help.
         As an Oracle of Talos she also offers any kind of service that you may need (dirty -> WillDC).
-        You can find her in the Church of Talos.
+        You can find her in the Temple of Talos.
         She hopes to speak tomorrow when you are more familiar with the city and she has done her prayers.
     </p>
 
