--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/02-the-assassination.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/02-the-assassination.html
@@ -5,7 +5,7 @@
 
 {% block events %}
     <p>
-        As you walk towards the church you are startled by shouting behind you.
+        As you walk towards the temple you are startled by shouting behind you.
         Two rough sailors are having a loud argument about money in front of a pity street merchant.
         They draw a lot of attention and start a fist fight (roll initiative).
     </p>
@@ -13,7 +13,7 @@
     <p>Round by round:</p>
     <ol>
         <li>
-            A SpotDC20 will make adventurers notice somebody walking quick towards the church as soon as the first punch hits.
+            A SpotDC20 will make adventurers notice somebody walking quick towards the temple as soon as the first punch hits.
             SenseMotiveDC10 indicates he is up to something.
         </li>
         <li>The person heads towards the elevator and becomes invisible there.</li>
@@ -26,7 +26,7 @@
 {% block locations %}
     <p>
         Happens on the square before and inside the
-        <a href="../../places/Yauhnn/trade-district/church-of-Waukeen.html">Waukeen church</a>
+        <a href="../../places/Yauhnn/trade-district/temple-of-Waukeen.html">Waukeen temple</a>
     </p>
 {% endblock %}
 
