--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
@@ -34,7 +34,7 @@ Locathah stats
     </ul>
     <p>Neighbooring area's</p>
     <ul>
-        <li>There is a stair winding up the cliff to <a href="church-of-Valkur.html">Lighthouse / The Church of Valkur</a></li>
+        <li>There is a stair winding up the cliff to <a href="temple-of-Valkur.html">Lighthouse / The Temple of Valkur</a></li>
         <li>The cliff face is crawling with small caves forming <a href="cave-slums.html">The Cave Slums</a></li>
         <li>
             The pool in the middle of this area leads to <a href="sea-water-slums.html">The Sea Water Slums</a>
