--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/cave-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/cave-slums.html
@@ -18,7 +18,7 @@
 
     <p>From here the adventurers can go to:</p>
     <ul>
-        <li>Climb the stairs up the cliff side to <a href="church-of-Valkur.html">church of Valkur</a></li>
+        <li>Climb the stairs up the cliff side to <a href="temple-of-Valkur.html">temple of Valkur</a></li>
         <li>
             Work your way down the caves and through narrow alley to <a href="slums-market.html">slums market</a>
             (FortDC12: nauseated, see BreathDC)
