--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/harbor-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/harbor-slums.html
@@ -14,7 +14,7 @@
 {% block locations %}
     <p>From here adventurers can visit</p>
     <ul>
-        <li>Walk towards the docks for <a href="../trade-district/church-of-Waukeen.html">Waukeen church</a></li>
+        <li>Walk towards the docks for <a href="../trade-district/temple-of-Waukeen.html">Waukeen temple</a></li>
         <li>Walk towards the sea for <a href="fisher-boats.html">fisher boats</a></li>
         <li>Against the cliff face there is a small <a href="prison.html">prison</a></li>
     </ul>
