--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/slums-market.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/slums-market.html
@@ -15,7 +15,7 @@
     </ol>
     <p>Neighbooring area's</p>
     <ul>
-        <li>A tucked away shrine with secret entrance (SearchDC25) to <a href="church-of-Talos.html">church of Talos</a></li>
+        <li>A tucked away shrine with secret entrance (SearchDC25) to <a href="temple-of-Talos.html">temple of Talos</a></li>
         <li>In the back of brewery a stinking passage (FortDC12: nauseated, see BreathDC) to <a href="cave-slums.html">cave slums</a></li>
         <li>Towards the light, outside to <a href="fisher-boats.html">fisher boats</a></li>
     </ul>
@@ -54,7 +54,7 @@
     <h4><a href="../../../characters/Thekesh-Moltabar+naieve-entrepeneur.html">Thekesh</a> - the brewery owner</h4>
     <p>
         He ownes the brewery, but also a fish stand on the food market as his alter ego Moltabar.
-        He secretly smuggles goods past Waukeen church.
+        He secretly smuggles goods past Waukeen temple.
     </p>
 
 {% endblock %}
