--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/temple-of-Talos.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/temple-of-Talos.html
@@ -1,11 +1,11 @@
 {% extends "dnd/abstract/place.html" %}
 
-{% block title %}Church of Talos{% endblock %}
-{% block summary %}Secret church in Yauhnn for the God of Destruction.{% endblock %}
+{% block title %}Temple of Talos{% endblock %}
+{% block summary %}Secret temple in Yauhnn for the God of Destruction.{% endblock %}
 
 {% block events %}
     <h4>First time</h4>
-    <p>When entering for the first time (through church of Valkur)</p>
+    <p>When entering for the first time (through temple of Valkur)</p>
     <ol>
         <li>Adventures enter through curtains to a bigger cave.</li>
         <li>Two half-Locathah are in a bloody fist fight right in front of their noses.</li>
@@ -32,7 +32,7 @@
 
     <p>From here adventurers can go to:</p>
     <ul>
-        <li>The stairs behind the curtains on the alter leading to <a href="temple-of-Valkur.html">church of Valkur</a></li>
+        <li>The stairs behind the curtains on the alter leading to <a href="temple-of-Valkur.html">temple of Valkur</a></li>
         <li>A small pathway in the back of the cave leads to <a href="slums-market.html">slums market</a></li>
     </ul>
 {% endblock %}
