--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/temple-of-Valkur.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/temple-of-Valkur.html
@@ -1,7 +1,7 @@
 {% extends "dnd/abstract/place.html" %}
 
-{% block title %}Church of Valkur{% endblock %}
-{% block summary %}Lighthouse that acts as a church for sailors.{% endblock %}
+{% block title %}Temple of Valkur{% endblock %}
+{% block summary %}Lighthouse that acts as a temple for sailors.{% endblock %}
 
 {% block events %}
     <p>
@@ -13,12 +13,12 @@
     <p>
         You can go to a secret door behind the altar. It leads into a cave passage.
         When you move away the curtain at the end of the passage you walk unto another alter.
-        However here the <a href="church-of-Talos.html">church</a> is full.
+        However here the <a href="temple-of-Talos.html">temple</a> is full.
     </p>
 {% endblock %}
 
 {% block locations %}
-    <p>The lighthouse/church consists of</p>
+    <p>The lighthouse/temple consists of</p>
     <ul>
         <li>Ground floor a place for prayer (always open).</li>
         <li>First floor a place for healing (closed at night).</li>
@@ -27,7 +27,7 @@
 
     <p>From here:</p>
     <ul>
-        <li>Secret door (SearchDC 25) behind alter to <a href="church-of-Talos.html">church of Talos</a></li>
+        <li>Secret door (SearchDC 25) behind alter to <a href="temple-of-Talos.html">temple of Talos</a></li>
         <li>Stairs down the cliff to <a href="cave-slums.html">cave slums</a></li>
     </ul>
 {% endblock %}
@@ -39,7 +39,7 @@
 {% block knowledges %}
     <dl class="dc">
         <dt>ReligionDC: (Valkur, when appropriate at this time)</dt>
-        <dd>10 >= God of good winds. Mostly prayed to by sailors. Churches often function as lighthouses.</dd>
+        <dd>10 >= God of good winds. Mostly prayed to by sailors. Temples often function as lighthouses.</dd>
         <dd>15 >= A lesser God that is not very important in the pantheon. Often thought to be a pawn of greater Gods.</dd>
         <dd>25 >= Rumored to be aligned with Talos god of storms.</dd>
     </dl>
