--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/big-market/index.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/big-market/index.html
@@ -15,8 +15,8 @@
                 <li></li>
                 <li></li>
                 <li></li>
-                <li>Market Square <a href="../church-of-Waukeen.html">church of Waukeen</a></li>
-                <li>Stairs up to <a href="../church-of-Waukeen.html">church of Waukeen</a></li>
+                <li>Market Square <a href="../temple-of-Waukeen.html">temple of Waukeen</a></li>
+                <li>Stairs up to <a href="../temple-of-Waukeen.html">temple of Waukeen</a></li>
                 <li>Elevator/scale into the sanctuary and treasury</li>
                 <li>Scale</li>
                 <li>Scale</li>
