--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/harbor/index.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/harbor/index.html
@@ -13,7 +13,7 @@
 {% block locations %}
     <p>
         The harbor as a place does not hold a lot of interesting sights.
-        You can get to <a href="church-of-Waukeen.html">church of Waukeen</a> from here.
+        You can get to <a href="../temple-of-Waukeen.html">temple of Waukeen</a> from here.
     </p>
 
     <p>
