--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/temple-of-Waukeen.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/temple-of-Waukeen.html
@@ -1,6 +1,6 @@
 {% extends "dnd/abstract/place.html" %}
 
-{% block title %}The Church of Waukeen{% endblock %}
+{% block title %}The Temple of Waukeen{% endblock %}
 {% block summary %}A place of worship for merchant. Main entrance to the market.{% endblock %}
 
 {% block events %}
@@ -15,7 +15,7 @@
 
     <p>The entrance</p>
     <ul>
-        <li>At the base of the church is the weighing square where goods wait for weighing.</li>
+        <li>At the base of the temple is the weighing square where goods wait for weighing.</li>
         <li>Two big scales on each side of the stairs lead to the next city level.</li>
         <li>An elevator in right "pillar", leads to next city level and 1st + 2nd floor</li>
         <li>Stairs to all 3 levels in the left pillar, usually guarded</li>
@@ -26,7 +26,7 @@
         <li>That weighing square on city ground level is the entry to the <a href="harbor/">harbor</a></li>
         <li>On the north side the weighing square leads to <a href="../slums-district/harbor-slums.html">harbor slums</a></li>
         <li>On the south sides weighing square leads to <a href="../noble-district/wannabe-nobles.html">wannabe nobles</a></li>
-        <li>The church lies in front of and is entry to <a href="big-market">the big market</a> on 1st city level</li>
+        <li>The temple lies in front of and is entry to <a href="big-market">the big market</a> on 1st city level</li>
     </ul>
 
     <p>Inside</p>
