--- a/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/04-finding-temple-of-Talos.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/04-finding-temple-of-Talos.html
@@ -42,7 +42,7 @@
 
     <dl class="dc">
         <dt>ReligionDC: (Valkur)</dt>
-        <dd>10 >= God of good winds. Mostly prayed to by sailors. Churches often function as lighthouses.</dd>
+        <dd>10 >= God of good winds. Mostly prayed to by sailors. Temples often function as lighthouses.</dd>
         <dd>15 >= A lesser God that is not very important in the pantheon. Often thought to be a pawn of greater Gods.</dd>
         <dd>25 >= Rumored to be aligned with Talos god of Destruction.</dd>
     </dl>
