Divide notes into the correct files.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/A0-fish-monopoly.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/A0-fish-monopoly.html
@@ -4,3 +4,28 @@
 <p>The only competitor left is someone who can do seasoning. This receipe is about to get nicked.</p>
 
 <p>Hungry adventurers should be delighted with fish from Otalan :)</p>
+
+<pre>
+Discovering Thekesh/Moltabar. What is the way in for these facts? Which leads are there besides Waukeen investigation? Are there prepurcosions to disabling fish market
+* Wear the magic neckless of Thekesh
+* Moltabar smells of fish
+
+Smell of fish shoul be the smell of the slums. Thekesh gets incriminated by Waukeen and by Oracle as a traitor.
+
+Waukeen mission
+
+It has come to the attention of Waukeen priests in Ordulin that a monopoly is building in the fish trade in Yauhnn.
+It is only natural that a good competitor at some point becomes the only competitor.
+It this then important to open up the market and challenge merchants to do even better.
+However a building monopoly has been denied by the local temple and this called for an investigation.
+When asking around among the fishermen for prices and asking to see the books the inquisitor was faced with an attempt to take his life.
+Now the local Waukeen temple is worried about the life of the inquisitor and hinders him in doing a real investigation.
+The adventurers may be capable of unveiling facts that the inquisitor can't possibly get to any more.
+Question is to visit Moltabar as an investor and see what his plans are, possibly viewing the books.
+They could also pose as fishermen to see how Moltabar is able to keep prices so low.
+Thekesh might be behind the smuggling, but when searching his appartment, nothing was found, not even anything of value.
+
+Moltabar is not interested in investors, but adventurers do see a couple of clues that he's not who he pretends to be.
+Similarly the adventurers could act as a union to negotiate better prices for the fishermen and see the same clues.
+Adventurers can speak to Thekesh for getting a job. He asks them to speak to Moltabar for getting a better paid job (smuggle)
+</pre>
