--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/D0-free-locathah.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/D0-free-locathah.html
@@ -1,1 +1,37 @@
 <p>Aboleth quest (comes near to secret left and underdark shaft)</p>
+
+<pre>
+Nimry mission (people need to call them saviours wherever they go)
+
+Nimry is an old lady that has seen to many of her loved ones disappear. She has grown bitter over this.
+When the adventurers approach her for services she states that Talos is a worthless God.
+
+"Well, well if it isn't our saviours. Don't think you get anything for free from me. What did Talos bring us ever,
+but loss and pain? Why would it be different this time?"
+
+If the adventurers are capable of assuring Nimry that they are different. Nimry will give it a shot.
+
+"I used to protect these people. Whenever they got taken I would be the one to get them back in secret.
+I couldn't save them all, but I did my best. Now I can't save any as these legs are abandoning me.
+I'm not as good a swim as I used to be. How about it saviours? Are you truly willing to save these people
+that live in the dirt, stink of fish and don't share your view on beauty?"
+
+If they say yes Nimry continues.
+
+"Sembia is formed by the rising of the underdark from the ocean. Its top is inhabited by the people of Sembia.
+ Below the surface other creatures roam.
+ Here in Yauhnn, as you can see, poor humans and the Locathah live in the shallows of the underdark depth.
+ Further down more sinister monstroids stir in the dark. One of the foulest is the aberration called Zorbash.
+It enslaves Locathah to live with him and do his hard work, until they collapse under the work load.
+The so called merchant gentleman tolerate this slavery, because it serves them well to get rid of rebellious Locathah once in a while.
+However this device will free the mind of any slave when you pronounce the command word and stay close.
+I used to sneak in and out regularly to free the innocent. Not a day goes by without a longing to help,
+but my body can't bear to do it any longer. Currently Helash son of Janolanash is in the grasp of Zorbash.
+Try to get him out. I'll lend you the device if you swear to return it. If you manage to kill Zorbash you can keep it.
+I have no need for it."
+
+(Nimry is not interested in helping Mirika, because she is a half-elf)
+
+When the adventurers do not take this quest on for some reason, then news of the death of Zorbash should persuade Nimry
+ to give the artifact any way. She then states that: "there might be other uses for it".
+</pre>
