Assign area's to merchants to get a picture of the city politics.

--- a/src/templatefiles/templates/dnd/concrete/characters/Valof+Waukeen-cleric.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/Valof+Waukeen-cleric.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block name %}Valof{% endblock %}
-{% block summary %}Head of the Waukeen temple. Allows FTG practises{% endblock %}
+{% block summary %}Head of the Waukeen temple and member of city council. Allows FTG practises{% endblock %}
 
 {% block story %}{% endblock %}
 {% block motivation %}
