--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/north-side-warehouses.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/north-side-warehouses.html
@@ -1,1 +1,5 @@
 <p>Also in caves</p>
+<p>
+    Warehouses mostly owned by <a href="../../../characters/Wehna+clothing-merchant.html">Wehna</a>
+    and <a href="../../../characters/Harar+wood-merchant.html">Harar</a>
+</p>
