--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/south-side-warehouses.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/south-side-warehouses.html
@@ -1,1 +1,6 @@
 <p>Also in caves</p>
+<p>
+    Most warehouses owned by
+    <a href="../../../characters/Otalan+food-and-drink-merchant.html">Otalan</a>
+    and <a href="../../../characters/Taduan+hulorn-animal-merchant.html">Taduan</a>
+</p>
