Bringing some flavor to the trade district.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/noble-district/wannabe-nobles.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/noble-district/wannabe-nobles.html
@@ -1,1 +1,2 @@
 <p>Mines lie behind this area. The air is filled with miners dust.</p>
+<p>It used to be a poor part of the city, but thanks to FTG it is blooming business.</p>
