--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/big-market/index.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/big-market/index.html
@@ -20,8 +20,8 @@
                 <li>Elevator/scale into the sanctuary and treasury</li>
                 <li>Scale</li>
                 <li>Scale</li>
-                <li>Soutern exit to <a href="../south-side-warehouses.html">South side warehouses</a></li>
-                <li>Northern exit to <a href="../north-side-warehouses.html">North side warehouses</a></li>
+                <li>Soutern exit to <a href="../city-center.html">South side warehouses</a></li>
+                <li>Northern exit to <a href="../the-gildes.html">North side warehouses</a></li>
                 <li>Ramp to <a href="../../noble-district/south-side-nobles.html">South side nobles</a></li>
                 <li>Ramp to <a href="../../noble-district/north-side-nobles.html">North side nobles</a></li>
             </ol>
